[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
name = "bevy_trauma_shake"
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2021"
description = "A plugin for shaking 2d cameras"
keywords = ["gamedev", "bevy", "camera"]
repository = "https://github.com/johanhelsing/bevy_trauma_shake"

[features]
default = ["events", "commands", "system_param"]
events = []
commands = []
system_param = []

[dependencies]
bevy = { version = "0.15", default-features = false }
noisy_bevy = "0.8.0"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_sprite",
    "webgl2",
    "x11",
] }
bevy_pancam = { version = "0.16", features = ["bevy_egui"] }
rand = "0.8"
bevy-inspector-egui = { version = "0.28", default-features = false, features = [
    "bevy_render",
] }
