[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
name = "bevy_trauma_shake"
license = "MIT OR Apache-2.0"
version = "0.7.0"
edition = "2021"
description = "A plugin for shaking 2d cameras"
keywords = ["gamedev", "bevy", "camera"]
repository = "https://github.com/johanhelsing/bevy_trauma_shake"

[features]
default = ["events", "commands", "system_param"]
events = []
commands = []
system_param = []

[dependencies]
bevy = { version = "0.18", default-features = false }
noisy_bevy = "0.13"

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_mikktspace", # required for bevy-inspector-egui 0.36
  "bevy_winit",
  "bevy_sprite_render",
  "bevy_text",
  "bevy_log",
  "webgl2",
  "x11",
] }
bevy_pancam = { version = "0.20", features = ["bevy_egui_0_39"] }
rand = "0.9"
bevy-inspector-egui = { version = "0.36", default-features = false, features = [
  "bevy_render",
] }
